--- a/Set_Card_Game/src/main/resources/config.properties
+++ b/Set_Card_Game/src/main/resources/config.properties
@@ -18,7 +18,7 @@ FeatureSize=3
 # The number of human players (i.e. keyboard input)
 HumanPlayers=2
 # The number of computer players (i.e. input is simulated)
-ComputerPlayers=0
+ComputerPlayers=2
 # The number of rows in the grid of cards on the table (and on the screen)
 Rows=3
 # The number of columns in the grid of cards on the table (and on the screen)
@@ -42,11 +42,11 @@ EndGamePauseSeconds=5
 
 # The names of the players to display on the screen
 # Note: If there are more players than names, the remaining players will be called "Player 3", "Player 4", etc.
-PlayerNames=1 , 2 
+PlayerNames=player 1 , player 2 
 # The width (in pixels) of each cell
 CellWidth=258
 # The height (in pixels) of each cell
-CellHeight=167
+CellHeight=155
 # The Width (in pixels) of player name cell
 PlayerCellWidth=250
 # The height (in pixels) of player name cell
