--- a/Set_Card_Game/src/main/resources/config.properties
+++ b/Set_Card_Game/src/main/resources/config.properties
@@ -37,6 +37,8 @@ PenaltyFreezeSeconds=3
 TableDelaySeconds=0.1
 # The number of seconds to pause at the end of the game before closing
 EndGamePauseSeconds=5
+# The number of seconds to pause between the Ai player's key presses
+PauseAiPlayer=0.5
 
 # UI DATA
 
